--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/index.js",
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
     "@eslint/js": "^9.2.0",
     "eslint": "^9.2.0",
     "globals": "^15.1.0",
+    "nodemon": "^3.1.7",
     "pino-pretty": "^11.2.2"
   },
   "dependencies": {
@@ -21,7 +23,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7",
     "pino-http": "^10.3.0"
   }
 }
