--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pino-pretty": "^11.2.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
